# bingham_registration

./: .gitignore  CMakeLists.txt  Instruction to run tests  Makefile  NOTES.txt  README.md  compute_transformed_points.cpp  data_bunny.txt  example.launch  get_changes_in_transformation_estimate.h  model_bunny.txt  package.xml  ptcld_moving.txt  ptcld_moving_3.txt  qr_kf.cpp  qr_kf.h  registration_make  setup.py  treeTest
GUI/: registration.py  registration_gui.ui
build-src-Desktop_Qt_5_7_1_GCC_64bit-Debug/: Makefile
data/: lucyTarget.txt  lucyTargetNoisy.txt  normal_fixed_6.txt  normal_fixed_7.txt  normal_moving_6.txt  normal_moving_7.txt  ptcld_fixed_1.mat  ptcld_fixed_1.txt  ptcld_fixed_2.mat  ptcld_fixed_3.mat  ptcld_fixed_3.txt  ptcld_fixed_5.txt  ptcld_fixed_6.txt  ptcld_fixed_7.txt  ptcld_fixed_kinect.txt  ptcld_moving_1.mat  ptcld_moving_1.txt~  ptcld_moving_2.mat  ptcld_moving_2.txt  ptcld_moving_3.mat  ptcld_moving_4.txt  ptcld_moving_5.txt  ptcld_moving_6.txt  ptcld_moving_6.txt~  ptcld_moving_7.txt  ptcld_moving_kinect.txt  ptcld_moving_paper.txt  test.txt~
include/: 3D_table.h  _DS_Store  bingham_filter.h  bingham_kf.h  compute_transformed_points.h  conversions.h  dual_quaternion_registration.h  get_changes_in_transformation_estimate.h  kd_tree.h  long_double_def.h  pch.h  qr_kf.h  register_txt.h  register_txt_files.h  registration.h  registration_est_bingham_kf_rgbd.h  registration_est_combined_rgbd.h  registration_est_kf_rgbd.h  registration_estimation.h  registration_tools.h  search_result.h  sort_indexes.h  stdafx.h  targetver.h  type_defs.h
include/dual_quaternion_registration/: KDTree.h  bingham_kf.h  bingham_normal_kf.h  compute_transformed_points.h  create_pcd.cpp  get_changes_in_transformation_estimate.h  kd_normal_tree.h  kd_tree.h  long_double_def.h  new_pcl_type.h  qr_kf.h  registration_est_bingham_kf_rgbd.h  registration_est_bingham_normal.h  registration_est_kf_rgbd.h
precompiled_clibs/Release/: _qf_registration_windows.exp
result/: Result.txt  result.txt
src/: 3D_table.cpp  KDTree.cpp  _DS_Store  a.out  bingham_filter.cpp  bingham_kf.cpp  compute_transformed_points.cpp  compute_transformed_points.cpp~  console_registration_main.cpp  conversions.cpp  dual_quaternion_registration.cpp  get_changes_in_transformation_estimate.cpp  kd_tree.cpp  little_eigen_test.cpp  pch.cpp  qf_registration_client.cpp  qf_registration_server.cpp  qr_kf.cpp  register_txt.cpp  register_txt_files.cpp  registration.cpp  registration_est_bingham_kf_rgbd.cpp  registration_est_combined_rgbd.cpp  registration_est_kf_rgbd.cpp  registration_estimation.cpp  registration_gui_main.cpp  registration_main.cpp  registration_tools.cpp  ros_registration.cpp  ros_registration_service.cpp  sort_indexes.cpp  tests.cpp  widget.cpp  widget.h  widget.ui
src/GUI/: main.py  registration.py  registration_gui.ui  ui_design.py
src/bingham_registration/: QVTKRenderWindowInteractor.py  main.py  register_txt.py  registration_client.py
src/dual_quaternion_registration/: combined_register.py  main.py  qf_register.py  registration_gui.ui  result.txt
src/normal_code/: bingham_normal_kf.cpp  kd_search_normals.cpp  registration_est_bingham_normal.cpp  registration_normal_main.cpp
srv/: QFRegistration.srv  RegistrationService.srv
tables/: Table.txt  Table1.txt
test/: utest.cpp
